# chronver

./: .gitignore  README.md  _own_version.py  pyproject.toml  test.sh
chronver/: __init__.py  git.py  setuptools_hooks.py
rschronver/: __init__.py  git.py  hatch_hooks.py  pkg_info.py  setuptools_hooks.py
src/rschronver/: __init__.py  git.py  hatch_hooks.py  pkg_info.py  setuptools_hooks.py
tests/: conftest.py  git_test.py  pkg_info_test.py  setuptools_hooks_test.py
