[build-system]
requires = ["hatchling>=1.1.0"]
build-backend = "hatchling.build"

[project]
authors = [
    { name = "RadiaSoft LLC", email = "pip@pykern.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "hatchling>=1.1.0",
]
description = 'Build system plugin for pure chronological versions from Git'
version = "20240308.225804"
keywords = [
    "git",
    "hatch",
    "plugin",
    "scm",
    "vcs",
    "version",
]
name = "rschronver"
readme = "README.md"
requires-python = ">=3.8"

[project.entry-points.hatch]
rschronver = "rschronver.hatch_hooks"

[project.urls]
Homepage = "https://github.com/radiasoft/rschronver"
