[build-system]
build-backend = "_own_version:build_meta"
requires = ["setuptools>=61", "setuptools-scm>=8"]
#build-backend = "setuptools.build_meta"
backend-path = [".", "src"]

[project]
authors = [
    { name = "RadiaSoft LLC", email = "pip@pykern.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "setuptools>=61",
]
description = 'Build system plugin for pure chronological versions from Git'
dynamic = ["version"]
keywords = [
    "git",
    "hatch",
    "plugin",
    "scm",
    "vcs",
    "version",
]
name = "rschronver"
readme = "README.md"
requires-python = ">=3.8"

[project.entry-points."setuptools.finalize_distribution_options"]
rschronver = "rschronver.setuptools_hooks:set_version"

[project.entry-points.hatch]
rschronver = "rschronver.hatch_hooks"

[project.urls]
Homepage = "https://github.com/radiasoft/rschronver"

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "_own_version.from_git" }

[tool.setuptools]
#packages = ["hatchit"]
#zip-safe = false
license-files = ["LICENSE"]
#include-package-data = true

#[project.optional-dependencies]

[tool.setuptools_scm]
